--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -20,7 +20,7 @@
 
     <div class="grid-item grid-column-2">
 
-        <h3><i class="fad fa-newspaper fa-fw"></i> The Powerhouses</h3>
+        <h3><i class="fad fa-newspaper fa-fw"></i> The Powerhouses, Orgs, and Aggregators</h3>
 
         <ul>
             <li>
@@ -51,6 +51,36 @@
                 <i class="fad fa-flag-usa fa-sm fa-fw"></i>
                 <a href="https://www.thenation.com/">
                     The Nation
+                </a>
+            </li>
+            <li>
+                <i class="fas fa-fist-raised fa-sm fa-fw"></i>
+                <a href="https://therednation.org/">
+                    The Red Nation
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-box-ballot fa-sm fa-fw"></i>
+                <a href="https://blog.issuevoter.org/">
+                    IssueVoter
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-rupiah-sign fa-sm fa-fw"></i>
+                <a href="https://newrepublic.com/">
+                    The New Republic
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-helicopter fa-sm fa-fw"></i>
+                <a href="https://newrepublic.com/apocalypse-soon">
+                    Apocalypse Soon
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-slash-forward fa-sm fa-fw"></i>
+                <a href="https://jacobinmag.com/">
+                    Jacobin Magazine
                 </a>
             </li>
         </ul>
@@ -84,6 +114,12 @@
                 <i class="fad fa-fist-raised fa-sm fa-fw"></i>
                 <a href="https://www.bostonglobe.com/opinion/the-emancipator/">
                     <strong>The Emancipator</strong> · <span>Ibram X. Kendi</span>
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-tire-rugged fa-sm fa-fw"></i>
+                <a href="https://www.emptywheel.net/">
+                    <strong>emptywheel</strong> · <span>Marcy Wheeler</span>
                 </a>
             </li>
         </ul>
@@ -129,42 +165,6 @@
                 <span class="fa-li"><i class="fad fa-link fa-sm fa-fw"></i></span>
                 <a href="https://drive.google.com/drive/folders/1efQVBclGxwnCCYVLbzH96A0QRSWwmTYI">
                     Colorado Data Files
-                </a>
-            </li>
-            <li>
-                <span class="fa-li"><i class="fad fa-link fa-sm fa-fw"></i></span>
-                <a href="https://c19early.com/">
-                    COVID-19 early treatment: real-time analysis of 718 studies
-                </a>
-            </li>
-            <li>
-                <span class="fa-li"><i class="fad fa-link fa-sm fa-fw"></i></span>
-                <a href="https://www.mdpi.com/2076-393X/9/7/693/htm">
-                    Published: 24 June 2021 > The Safety of COVID-19 Vaccinations—We Should Rethink the Policy
-                </a>
-            </li>
-            <li>
-                <span class="fa-li"><i class="fad fa-link fa-sm fa-fw"></i></span>
-                <a href="https://blogs.bmj.com/bmj/2021/06/08/why-we-petitioned-the-fda-to-refrain-from-fully-approving-any-covid-19-vaccine-this-year/">
-                    Why we petitioned the FDA to refrain from fully approving any covid-19 vaccine this year
-                </a>
-            </li>
-            <li>
-                <span class="fa-li"><i class="fad fa-link fa-sm fa-fw"></i></span>
-                <a href="https://www.bmj.com/content/373/bmj.n1244">
-                    Published 18 May 2021 > Covid-19 vaccines: In the rush for regulatory approval, do we need more data?
-                </a>
-            </li>
-            <li>
-                <span class="fa-li"><i class="fad fa-link fa-sm fa-fw"></i></span>
-                <a href="https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(20)31180-6/fulltext">
-                    RETRACTED: Hydroxychloroquine or chloroquine with or without a macrolide for treatment of COVID-19: a multinational registry analysis
-                </a>
-            </li>
-            <li>
-                <span class="fa-li"><i class="fad fa-link fa-sm fa-fw"></i></span>
-                <a href="https://blogs.bmj.com/bmj/2021/01/04/peter-doshi-pfizer-and-modernas-95-effective-vaccines-we-need-more-details-and-the-raw-data/">
-                    Peter Doshi: Pfizer and Moderna’s “95% effective” vaccines—we need more details and the raw data
                 </a>
             </li>
         </ul>
@@ -218,6 +218,54 @@
 
     <div class="grid-item grid-column-2">
 
+        <h3><i class="fad fa-hands-helping fa-fw"></i> The Anarchists</h3>
+
+        <ul>
+            <li>
+                <i class="fad fa-comment-lines fa-sm fa-fw"></i>
+                <a href="https://theconversation.com/what-is-anarchism-all-about-50373">
+                    <strong>Get it straight #1:</strong> <span>What is anarchism all about?</span>
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-hands-heart fa-sm fa-fw"></i>
+                <a href="https://www.teenvogue.com/story/anarchy-explained-what-it-is-why-pop-culture-loves-it">
+                    <strong>Get it straight #2:</strong> <span>Anarchy: What It Is and Why Pop Culture Loves It</span>
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-newspaper fa-sm fa-fw"></i>
+                <a href="https://www.washingtonpost.com/outlook/2020/06/04/stop-blaming-everything-bad-anarchists/">
+                    <strong>Get it straight #3:</strong> <span>Stop blaming everything bad on anarchists</span>
+                </a>
+            </li>
+            <li>
+                <i class="fad fa-books fa-sm fa-fw"></i>
+                <a href="https://theanarchistlibrary.org/special/index">
+                    <strong>Now go read!:</strong> <span>The Anarchist Library</span>
+                </a>
+            </li>
+        </ul>
+        
+    </div>
+
+    <div class="grid-item grid-column-2">
+
+        <h3><i class="fad fa-child fa-fw"></i> The Education</h3>
+
+        <ul>
+            <li>
+                <i class="fad fa-head-side-heart fa-sm fa-fw"></i>
+                <a href="https://www.psychologytoday.com/us/contributors/peter-gray-phd">
+                    <strong>Psychology Today</strong> <span>Peter Gray, Ph.D.</span>
+                </a>
+            </li>
+        </ul>
+        
+    </div>
+
+    <div class="grid-item grid-column-2">
+
         <h3><i class="fad fa-grin-squint-tears fa-fw"></i> The Ridiculousness</h3>
 
         <ul>
@@ -253,39 +301,6 @@
             </li>
         </ul>
 
-    </div>
-
-    <div class="grid-item grid-column-2">
-
-        <h3><i class="fad fa-hands-helping fa-fw"></i> The Anarchists</h3>
-
-        <ul>
-            <li>
-                <i class="fad fa-comment-lines fa-sm fa-fw"></i>
-                <a href="https://theconversation.com/what-is-anarchism-all-about-50373">
-                    <strong>Get it straight #1:</strong> <span>What is anarchism all about?</span>
-                </a>
-            </li>
-            <li>
-                <i class="fad fa-hands-heart fa-sm fa-fw"></i>
-                <a href="https://www.teenvogue.com/story/anarchy-explained-what-it-is-why-pop-culture-loves-it">
-                    <strong>Get it straight #2:</strong> <span>Anarchy: What It Is and Why Pop Culture Loves It</span>
-                </a>
-            </li>
-            <li>
-                <i class="fad fa-newspaper fa-sm fa-fw"></i>
-                <a href="https://www.washingtonpost.com/outlook/2020/06/04/stop-blaming-everything-bad-anarchists/">
-                    <strong>Get it straight #3:</strong> <span>Stop blaming everything bad on anarchists</span>
-                </a>
-            </li>
-            <li>
-                <i class="fad fa-books fa-sm fa-fw"></i>
-                <a href="https://theanarchistlibrary.org/special/index">
-                    <strong>Now go read!:</strong> <span>The Anarchist Library</span>
-                </a>
-            </li>
-        </ul>
-        
     </div>
 
 </div>
