--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -6,12 +6,12 @@
 
         <h1 class="main-heading">
             <span class="fa-layers fa-fw">
-                <i class="fad fa-star-exclamation" data-fa-transform="rotate--30 shrink-6 up-12 left-12"></i>
-                <i class="fad fa-lightbulb-exclamation" data-fa-transform="rotate--340 shrink-7 up-15 right-8"></i>
-                <i class="fad fa-exclamation" data-fa-transform="rotate--10 shrink-9 up-14 left-4"></i>
-                <i class="fad fa-question" data-fa-transform="shrink-8 up-15"></i>
-                <i class="fad fa-bell-exclamation" data-fa-transform="rotate--325 shrink-6 up-9 right-15"></i>
-                <i class="fad fa-surprise fa-lg"></i>
+                <i class="fa-duotone fa-star-exclamation" data-fa-transform="rotate--30 shrink-6 up-12 left-12"></i>
+                <i class="fa-duotone fa-lightbulb-exclamation" data-fa-transform="rotate--340 shrink-7 up-15 right-8"></i>
+                <i class="fa-duotone fa-exclamation" data-fa-transform="rotate--10 shrink-9 up-14 left-4"></i>
+                <i class="fa-duotone fa-question" data-fa-transform="shrink-8 up-15"></i>
+                <i class="fa-duotone fa-bell-exclamation" data-fa-transform="rotate--325 shrink-6 up-9 right-15"></i>
+                <i class="fa-duotone fa-surprise fa-lg"></i>
             </span><br>
             Pop That News Bubble
         </h1>
@@ -20,65 +20,65 @@
 
     <div class="grid-item grid-column-2">
 
-        <h3><i class="fad fa-newspaper fa-fw"></i> The Powerhouses, Orgs, and Aggregators</h3>
+        <h3><i class="fa-duotone fa-newspaper fa-fw"></i> The Powerhouses, Orgs, and Aggregators</h3>
 
         <ul>
             <li>
-                <i class="fad fa-microphone fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-microphone fa-sm fa-fw"></i>
                 <a href="https://www.democracynow.org/">
                     Democracy Now!
                 </a>
             </li>
             <li>
-                <i class="fad fa-search fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-search fa-sm fa-fw"></i>
                 <a href="https://www.propublica.org/">
                     ProPublica
                 </a>
             </li>
             <li>
-                <i class="fad fa-satellite-dish fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-satellite-dish fa-sm fa-fw"></i>
                 <a href="https://theintercept.com/">
                     The Intercept
                 </a>
             </li>
             <li>
-                <i class="fad fa-landmark fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-landmark fa-sm fa-fw"></i>
                 <a href="https://theappeal.org/">
                     The Appeal
                 </a>
             </li>
             <li>
-                <i class="fad fa-flag-usa fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-flag-usa fa-sm fa-fw"></i>
                 <a href="https://www.thenation.com/">
                     The Nation
                 </a>
             </li>
             <li>
-                <i class="fas fa-fist-raised fa-sm fa-fw"></i>
+                <i class="fa-solid fa-fist-raised fa-sm fa-fw"></i>
                 <a href="https://therednation.org/">
                     The Red Nation
                 </a>
             </li>
             <li>
-                <i class="fad fa-box-ballot fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-box-ballot fa-sm fa-fw"></i>
                 <a href="https://blog.issuevoter.org/">
                     IssueVoter
                 </a>
             </li>
             <li>
-                <i class="fad fa-rupiah-sign fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-rupiah-sign fa-sm fa-fw"></i>
                 <a href="https://newrepublic.com/">
                     The New Republic
                 </a>
             </li>
             <li>
-                <i class="fad fa-helicopter fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-helicopter fa-sm fa-fw"></i>
                 <a href="https://newrepublic.com/apocalypse-soon">
                     Apocalypse Soon
                 </a>
             </li>
             <li>
-                <i class="fad fa-slash-forward fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-slash-forward fa-sm fa-fw"></i>
                 <a href="https://jacobinmag.com/">
                     Jacobin Magazine
                 </a>
@@ -89,35 +89,35 @@
 
     <div class="grid-item grid-column-2">
 
-        <h3><i class="fad fa-user-secret fa-fw"></i> The Troublemakers</h3>
+        <h3><i class="fa-duotone fa-user-secret fa-fw"></i> The Troublemakers</h3>
 
         <ul>
             <li>
-                <i class="fad fa-typewriter fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-typewriter fa-sm fa-fw"></i>
                 <a href="https://www.dailyposter.com/">
                     <strong>The Daily Poster</strong> · <span>David Sirota</span>
                 </a>
             </li>
             <li>
-                <i class="fad fa-dog fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-dog fa-sm fa-fw"></i>
                 <a href="https://greenwald.substack.com/">
                     <strong>Glenn Greenwald Substack</strong> · <span>Glenn Greenwald</span>
                 </a>
             </li>
             <li>
-                <i class="fad fa-splotch fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-splotch fa-sm fa-fw"></i>
                 <a href="https://the.ink/">
                     <strong>The Ink</strong> · <span>Anand Giridharadas</span>
                 </a>
             </li>
             <li>
-                <i class="fad fa-fist-raised fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-fist-raised fa-sm fa-fw"></i>
                 <a href="https://www.bostonglobe.com/opinion/the-emancipator/">
                     <strong>The Emancipator</strong> · <span>Ibram X. Kendi</span>
                 </a>
             </li>
             <li>
-                <i class="fad fa-tire-rugged fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-tire-rugged fa-sm fa-fw"></i>
                 <a href="https://www.emptywheel.net/">
                     <strong>emptywheel</strong> · <span>Marcy Wheeler</span>
                 </a>
@@ -128,41 +128,41 @@
 
     <div class="grid-item grid-column-2">
 
-        <h3><i class="fad fa-viruses fa-fw"></i> The SARS-CoV-2</h3>
+        <h3><i class="fa-duotone fa-viruses fa-fw"></i> The SARS-CoV-2</h3>
 
         <ul class="fa-ul">
             <li>
-                <span class="fa-li"><i class="fad fa-laptop-medical fa-sm fa-fw"></i></span>
+                <span class="fa-li"><i class="fa-duotone fa-laptop-medical fa-sm fa-fw"></i></span>
                 <a href="https://pubmed.ncbi.nlm.nih.gov/?term=covid&sort=date">
                     PubMed "COVID"
                 </a>
             </li>
             <li>
-                <span class="fa-li"><i class="fad fa-sparkles fa-sm fa-fw"></i></span>
+                <span class="fa-li"><i class="fa-duotone fa-sparkles fa-sm fa-fw"></i></span>
                 <a href="https://www.nature.com/articles/d41586-020-00502-w">
                     New Research
                 </a>
             </li>
             <li>
-                <span class="fa-li"><i class="fad fa-hospital-user fa-sm fa-fw"></i></span>
+                <span class="fa-li"><i class="fa-duotone fa-hospital-user fa-sm fa-fw"></i></span>
                 <a href="https://www.youtube.com/user/ifr48/videos?view=0&sort=dd&shelf_id=0">
                     IHU Marseille Youtube
                 </a>
             </li>
             <li>
-                <span class="fa-li"><i class="fad fa-syringe fa-sm fa-fw"></i></span>
+                <span class="fa-li"><i class="fa-duotone fa-syringe fa-sm fa-fw"></i></span>
                 <a href="https://thevaccinereaction.org/vaccination/">
                     The Vaccine Reaction
                 </a>
             </li>
             <li>
-                <span class="fa-li"><i class="fad fa-book-medical fa-sm fa-fw"></i></span>
+                <span class="fa-li"><i class="fa-duotone fa-book-medical fa-sm fa-fw"></i></span>
                 <a href="https://www.cochranelibrary.com/covid-19">
                     Cochrane Library
                 </a>
             </li>
             <li>
-                <span class="fa-li"><i class="fad fa-link fa-sm fa-fw"></i></span>
+                <span class="fa-li"><i class="fa-duotone fa-link fa-sm fa-fw"></i></span>
                 <a href="https://drive.google.com/drive/folders/1efQVBclGxwnCCYVLbzH96A0QRSWwmTYI">
                     Colorado Data Files
                 </a>
@@ -173,41 +173,41 @@
 
     <div class="grid-item grid-column-2">
 
-        <h3><i class="fad fa-microphone-alt fa-fw"></i> The Podcasts</h3>
+        <h3><i class="fa-duotone fa-microphone-alt fa-fw"></i> The Podcasts</h3>
 
         <ul>
             <li>
-                <i class="fad fa-cross fa-rotate-180 fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-cross fa-rotate-180 fa-sm fa-fw"></i>
                 <a href="https://www.patreon.com/badfaithpodcast">
                     <strong>Bad Faith</strong> · <span>Briahna Joy Gray & Virgil Texas</span>
                 </a>
             </li>
             <li>
-                <i class="fad fa-traffic-light-stop fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-traffic-light-stop fa-sm fa-fw"></i>
                 <a href="https://lady-dont-take-no.simplecast.com/">
                     <strong>Lady Don't Take No</strong> · <span>Alicia Garza</span>
                 </a>
             </li>
             <li>
-                <i class="fad fa-lasso fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-lasso fa-sm fa-fw"></i>
                 <a href="https://podcasts.apple.com/us/podcast/the-tight-rope/id1524242837">
                     <strong>The Tight Rope</strong> · <span>Dr. Cornell West & Professor Tricia Rose </span>
                 </a>
             </li>
             <li>
-                <i class="fad fa-landmark-alt fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-landmark-alt fa-sm fa-fw"></i>
                 <a href="https://congressionaldish.com/">
                     <strong>Congressional Dish</strong> · <span>Jen Briney</span>
                 </a>
             </li>
             <li>
-                <i class="fad fa-satellite fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-satellite fa-sm fa-fw"></i>
                 <a href="https://theintercept.com/podcasts/intercepted/">
                     <strong>Intercepted</strong> · <span>Jeremy Scahill</span>
                 </a>
             </li>
             <li>
-                <i class="fad fa-space-station-moon-alt fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-space-station-moon-alt fa-sm fa-fw"></i>
                 <a href="https://theintercept.com/podcasts/deconstructed/">
                     <strong>Deconstructed</strong> · <span>Ryan Grim</span>
                 </a>
@@ -218,29 +218,29 @@
 
     <div class="grid-item grid-column-2">
 
-        <h3><i class="fad fa-hands-helping fa-fw"></i> The Anarchists</h3>
+        <h3><i class="fa-duotone fa-hands-helping fa-fw"></i> The Anarchists</h3>
 
         <ul>
             <li>
-                <i class="fad fa-comment-lines fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-comment-lines fa-sm fa-fw"></i>
                 <a href="https://theconversation.com/what-is-anarchism-all-about-50373">
                     <strong>Get it straight #1:</strong> <span>What is anarchism all about?</span>
                 </a>
             </li>
             <li>
-                <i class="fad fa-hands-heart fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-hands-heart fa-sm fa-fw"></i>
                 <a href="https://www.teenvogue.com/story/anarchy-explained-what-it-is-why-pop-culture-loves-it">
                     <strong>Get it straight #2:</strong> <span>Anarchy: What It Is and Why Pop Culture Loves It</span>
                 </a>
             </li>
             <li>
-                <i class="fad fa-newspaper fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-newspaper fa-sm fa-fw"></i>
                 <a href="https://www.washingtonpost.com/outlook/2020/06/04/stop-blaming-everything-bad-anarchists/">
                     <strong>Get it straight #3:</strong> <span>Stop blaming everything bad on anarchists</span>
                 </a>
             </li>
             <li>
-                <i class="fad fa-books fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-books fa-sm fa-fw"></i>
                 <a href="https://theanarchistlibrary.org/special/index">
                     <strong>Now go read!:</strong> <span>The Anarchist Library</span>
                 </a>
@@ -251,11 +251,11 @@
 
     <div class="grid-item grid-column-2">
 
-        <h3><i class="fad fa-child fa-fw"></i> The Education</h3>
+        <h3><i class="fa-duotone fa-child fa-fw"></i> The Education</h3>
 
         <ul>
             <li>
-                <i class="fad fa-head-side-heart fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-head-side-heart fa-sm fa-fw"></i>
                 <a href="https://www.psychologytoday.com/us/contributors/peter-gray-phd">
                     <strong>Psychology Today</strong> <span>Peter Gray, Ph.D.</span>
                 </a>
@@ -266,35 +266,35 @@
 
     <div class="grid-item grid-column-2">
 
-        <h3><i class="fad fa-grin-squint-tears fa-fw"></i> The Ridiculousness</h3>
+        <h3><i class="fa-duotone fa-grin-squint-tears fa-fw"></i> The Ridiculousness</h3>
 
         <ul>
             <li>
-                <i class="fad fa-grin-squint fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-grin-squint fa-sm fa-fw"></i>
                 <a href="https://www.theonion.com/">
                     The Onion
                 </a>
             </li>
             <li>
-                <i class="fad fa-chair fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-chair fa-sm fa-fw"></i>
                 <a href="https://www.mcsweeneys.net/">
                     McSweeney's
                 </a>
             </li>
             <li>
-                <i class="fad fa-hand-middle-finger fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-hand-middle-finger fa-sm fa-fw"></i>
                 <a href="https://twitter.com/thefingnews?lang=en">
                     The Fucking News
                 </a>
             </li>
             <li>
-                <i class="fad fa-eye fa-sm fa-fw"></i>
+                <i class="fa-duotone fa-eye fa-sm fa-fw"></i>
                 <a href="https://www.private-eye.co.uk/">
                     Private Eye
                 </a>
             </li>
             <li>
-                <i class="fab fa-octopus-deploy fa-sm fa-fw"></i>
+                <i class="fa-brand fa-octopus-deploy fa-sm fa-fw"></i>
                 <a href="https://www.dailysquib.co.uk/">
                     The Daily Squid
                 </a>
